k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ob-frontend
  namespace: openbanking-true
  labels:
    run: ob-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  ob-frontend
